# CMine

./: CMakeLists.txt
include/: app.h  buffers.h  camera.h  error_codes.h  log.h  shader.h  texture.h  window.h  world.h
shaders/: fragment.glsl  vertex.glsl
src/: app.c  buffers.c  camera.c  log.c  main.c  shader.c  texture.c  window.c  world.c
